--- a/main.css
+++ b/main.css
@@ -40,18 +40,85 @@ body {
 
 .wrapper {
     overflow: hidden;
-    min-width: 1100;
+    min-width: 1100px;
     min-height: 100%;
+}
+
+.welcome {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.welcome__logo {
+    margin-bottom: 20px;
+}
+
+.welcome__link {
+    display: block;
+    padding: 13px 20px;
+    border: solid 1px #1c5bc4;
+    color: #1c5bc4;
+    text-transform: uppercase;
+    text-decoration: none;
+    font-size: 12px;
+    font-weight: 700;
+    letter-spacing: 2.4px;
+}
+
+.welcome_container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    animation: bounce 1s 2s;
+}
+
+@keyframes bounce {
+    from,
+    20%,
+    53%,
+    80%,
+    to {
+        -webkit-animation-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1);
+        animation-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1);
+        -webkit-transform: translate3d(0, 0, 0);
+        transform: translate3d(0, 0, 0);
+    }
+    40%,
+    43% {
+        -webkit-animation-timing-function: cubic-bezier(0.755, 0.05, 0.855, 0.06);
+        animation-timing-function: cubic-bezier(0.755, 0.05, 0.855, 0.06);
+        -webkit-transform: translate3d(0, -30px, 0);
+        transform: translate3d(0, -30px, 0);
+    }
+    70% {
+        -webkit-animation-timing-function: cubic-bezier(0.755, 0.05, 0.855, 0.06);
+        animation-timing-function: cubic-bezier(0.755, 0.05, 0.855, 0.06);
+        -webkit-transform: translate3d(0, -15px, 0);
+        transform: translate3d(0, -15px, 0);
+    }
+    90% {
+        -webkit-transform: translate3d(0, -4px, 0);
+        transform: translate3d(0, -4px, 0);
+    }
+}
+
+.bounce {
+    -webkit-animation-name: bounce;
+    animation-name: bounce;
+    -webkit-transform-origin: center bottom;
+    transform-origin: center bottom;
 }
 
 .header {
     background-color: #4b73b5;
-    margin-bottom: 13px;
+    margin-bottom: 20px;
     min-height: 77px;
 }
 
 .container {
-    width: 1060px;
+    max-width: 1060px;
     margin: 0 auto;
     display: flex;
 }
@@ -60,7 +127,6 @@ body {
     height: 77px;
     justify-content: space-between;
     align-items: center;
-    margin-bottom: 20px;
 }
 
 .contacts {
@@ -83,9 +149,9 @@ body {
     text-decoration: underline;
 }
 
-.maincontent__sidebar {
+.sidebar {
     width: 180px;
-    display: inline-block;
+    /* display: inline-block; */
 }
 
 .menu__list {
@@ -126,7 +192,7 @@ li.menu__item {
 }
 
 .menu__link--main:hover:before,
-.menu__link_active.menu__link--main:before {
+.menu__link--active.menu__link--main:before {
     background-image: url('./img2/black_1main_icon.png')
 }
 
@@ -134,23 +200,25 @@ li.menu__item {
     background-image: url('./img2/feed_icon.png')
 }
 
-.menu__link--reviews:hover:before {
+.menu__link--reviews:hover:before,
+.menu__link--active.menu__link--reviews:before {
     background-image: url('./img2/black_2feed_icon.png')
 }
 
-.menu__link--crew:before {
+.menu__link--crew:before,
+    {
     background-image: url('./img2/team_icon.png')
 }
 
 .menu__link--crew:hover:before,
-.menu__link_active.menu__link--crew:before {
+.menu__link--active.menu__link--crew:before {
     background-image: url('./img2/black_3team_icon.png')
 }
 
 .maincontent__container {
     width: 880px;
-    display: inline-block;
-    vertical-align: top;
+    /* display: inline-block;
+    vertical-align: top; */
 }
 
 .banner {
@@ -259,24 +327,28 @@ li.menu__item {
     font-weight: 400;
 }
 
-.simbol-sub {
+.sub {
     color: #202020;
     bottom: 0;
+    font-size: 60%;
 }
 
-.other-items {
-    width: 880px;
+.content-list {
     margin-bottom: 50px;
 }
 
-.other-item {
+.content-list-items {
+    width: 880px;
+}
+
+.content-list-item {
     display: flex;
     padding-bottom: 30px;
     margin-bottom: 30px;
     border-bottom: 2px solid #f5f5f5;
 }
 
-.other-item:last-child {
+.content-list-item:last-child {
     margin: 0;
     padding: 0;
     border-bottom: none;
@@ -518,6 +590,8 @@ a.pagination__next:link,
 
 .booking-questions {
     margin-bottom: 58px;
+    flex: 1;
+    /* width: 100% = flex: 1; */
 }
 
 .booking-questions-block {
@@ -696,8 +770,10 @@ a.pagination__next:link,
 }
 
 .c-team__item {
-    width: 290px;
+    width: calc(100%12*4);
     padding: 20px 15px;
+    flex: 1 1 290px;
+    /*  width: calc(100%12*4) = width: 290px;*/
 }
 
 .team__img-wrap {
