--- a/main.css
+++ b/main.css
@@ -138,11 +138,11 @@ body {
     align-items: center;
 }
 
-.contacts {
+.header-contacts {
     text-align: right;
 }
 
-.contacts__phone {
+.header-contacts__phone {
     color: #ffffff;
     font-size: 21px;
     text-transform: uppercase;
@@ -150,12 +150,76 @@ body {
     text-decoration: none;
 }
 
-.contacts__desk {
+.header-contacts__time {
+    display: block;
+    position: relative;
+    cursor: pointer;
+}
+
+.header-contacts__time-link {
     color: #ffffff;
+    opacity: 0.7;
+    transition: opacity 0.7s;
+    display: block;
     font-size: 14px;
     font-weight: 700;
-    opacity: 0.7;
-    text-decoration: underline;
+    padding-top: 5px;
+}
+
+.schedule {
+    position: absolute;
+    left: -9999px;
+    top: 100%;
+    width: 164px;
+    height: 70px;
+    background-color: #fff;
+    border-radius: 5px 0 5px 5px;
+    box-shadow: 0 0 10px 0 rgba(23, 59, 117, 0.35);
+    padding: 15px 20px;
+    font-size: 14px;
+    text-align: left;
+    z-index: 2;
+    margin-top: 20px;
+    transition: opacity 0.7s;
+    opacity: 0;
+}
+.schedule__time{
+color: #1c5bc3;
+font-family: Roboto;
+font-size: 14px;
+font-weight: 700;
+line-height: 25px;
+}
+.schedule__notwork{
+    color: #221f1f;
+}
+.schedule:before {
+    display: block;
+    content: "";
+    width: 20px;
+    height: 20px;
+    background: #fff;
+    position: absolute;
+    top: -10px;
+    right: 6px;
+    transform: rotate(45deg);
+    box-shadow: -3px -3px 3px 0 rgba(23, 59, 117, 0.35);
+}
+
+.header-contacts__time:hover .schedule {
+    left: initial;
+    opacity: 1;
+    right: 0;
+}
+
+.schedule:after {
+    display: block;
+    width: 100%;
+    height: 20px;
+    position: absolute;
+    content: "";
+    top: -20px;
+    right: 0;
 }
 
 .saidbar {
@@ -416,10 +480,11 @@ li.menu__item {
     line-height: 21px;
 }
 
-.text--rew{
+.text--rew {
     font-weight: 300;
     line-height: 30px;
 }
+
 .text {
     font-weight: 300;
 }
@@ -604,7 +669,13 @@ a.pagination__next:link,
     font-weight: 700;
     color: #fff;
 }
-
+.contacts__phone{
+color: #ffffff;
+    font-size: 21px;
+    text-transform: uppercase;
+    font-weight: 700;
+    text-decoration: none;
+}
 .booking-application:hover {
     text-decoration: none;
     color: #1348f5;
@@ -847,3 +918,33 @@ a.pagination__next:link,
     line-height: 38px;
     text-transform: uppercase;
 }
+
+/* 
+.schedule:before {
+    display: block;
+    content: "";
+    width: 20px;
+    height: 20px;
+    background: #fff;
+    position: absolute;
+    top: -10px;
+    right: 6px;
+    transform: rotate(45deg);
+    box-shadow: -3px -3px 3px 0 rgba(23, 59, 117, 0.35);
+}
+
+.header-contacts__time:hover .schedule {
+    left: initial;
+    opacity: 1;
+    right: 0;
+}
+
+.schedule:after {
+    display: block;
+    width: 100%;
+    height: 20px;
+    position: absolute;
+    content: "";
+    top: -20px;
+    right: 0;
+} */
